# streamripperd

./: CMakeLists.txt  Toolchain-RaspberryPi.cmake  cmake-arm  installsrpkg.sh  mkpkg.sh
cmake/: FindGLIB2.cmake  FindLibStreamripper.cmake
console/: daemon.c
daemon/: README  config1.c  logging.c  logging.h  main.c  prefs.c  prefs1.h  socket.c  socket.h
etc/ubuntuhome/.config/upstart/: streamripperd.conf
include/: interfaces.h
include/log/: log.h  logd.h
lib/: CMakeLists.txt  README
player/: CMakeLists.txt  config.h  db_utils.c  db_utils.h  dev-deps.sh  gtk_utils.c  gtk_utils.h  main.c  mpd_utils.c  mpd_utils.h  sql.c  utils.c  utils.h
player/assets/: player.glade
src/: README
system/: systemd.txt
system/etc/systemd/system/: streamripper.service
test/: client.c  server.c  streamripper.c
